dnl
dnl Configuring 
dnl  process this file with "autoconf -I `gauche-config --ac`" to
dnl  generate 'configure'.
dnl $Id: configure.in,v 1.2 2005/08/28 19:15:57 skimu Exp $
dnl

AC_PREREQ(2.54)
AC_INIT(ggc.numerical.fftn, 1.0, shigenobu.kimura@gmail.com)
dnl If you want to use the system name (OS, architecture, etc) in the
dnl configure, uncomment the following line.  In such a case, you need
dnl to copy config.guess and config.sub from automake distribution.
AC_CANONICAL_SYSTEM

dnl Sets several Gauche-specific parameters.
AC_GAUCHE_INIT_EXT
dnl Sets the default value of INSTALL_TYPE macro.
dnl You can set it either 'site' or 'sys'.  Usually, user-provided
dnl extensions are installed as 'site' category.
AC_GAUCHE_INSTALL_TYPE(site)

dnl Check for headers.
dnl Add your macro calls to check required headers, if you have any.

dnl Get compiler parameters which Gauche has been compiled with.
dnl Do not use AC_PROG_CC.  You need to compile and link with the
dnl same programs as gosh.
AC_GAUCHE_CC
AC_GAUCHE_FLAGS

dnl Check for other programs.
dnl Add your macro calls to check existence of programs, if you have any.

dnl Check for libraries
dnl Add your macro calls to check required libraries, if you have any.

dnl Set LDFLAGS to generate dlopen-able extension.
dnl This should come after all tests, or the tests that does link will fail.
dnl skimu: we do not need to specify -lgauche, do we?

AC_GAUCHE_FIX_LIBS

#SITEARCHDIR=`gauche-config --sitearchdir`
#SYSARCHDIR=`gauche-config --sysarchdir`

##
## skimu: we do not need to specify -lgauche, do we?
##
case "$target" in
  *darwin*)
  LIBS=""
  ;;
  *-netbsdelf1.6*)
  LIBS=""
  ;;
  *-soralis8*)
  LIBS=""
  ;;
  *)
  LIBS=""
  ;;
esac


dnl Output
AC_GAUCHE_MAKE_GPD
AC_OUTPUT(Makefile)

