dnl
dnl Configuring ggc.numerical.lapack
dnl  process this file with autoconf to generate 'configure'.
dnl

AC_PREREQ(2.54)
AC_INIT(ggc.numerical.lapack, 1.0, skimu@mac.com)
dnl If you want to use the system name (OS, architecture, etc) in the
dnl configure, uncomment the following line.  In such a case, you need
dnl to copy config.guess and config.sub from automake distribution.
AC_CANONICAL_SYSTEM

dnl Set up gauche related commands.  The commands are set by scanning
dnl PATH.  You can override them by "GOSH=/my/gosh ./configure" etc.
AC_PATH_PROG([GOSH], gosh)
AC_PATH_PROG([GAUCHE_CONFIG], gauche-config)
AC_PATH_PROG([GAUCHE_PACKAGE], gauche-package)
AC_PATH_PROG([GAUCHE_INSTALL], gauche-install)
AC_PATH_PROG([GAUCHE_CESCONV], gauche-cesconv)

dnl Usually these parameters are set by AC_PROG_CC, but we'd rather use
dnl the same one as Gauche has been compiled with.
SOEXT=`"$GAUCHE_CONFIG" --so-suffix`
OBJEXT=`"$GAUCHE_CONFIG" --object-suffix`
EXEEXT=`"$GAUCHE_CONFIG" --executable-suffix`
AC_SUBST(SOEXT)
AC_SUBST(OBJEXT)
AC_SUBST(EXEEXT)

##
## skimu: we do not need to specify -lgauche, do we?
##
case "$target" in
  *darwin15*)
  LIBS="-framework Accelerate"
  ;;
  *darwin*)
  LIBS="-framework vecLib"
  ;;
  *-netbsdelf1.6*)
  LIBS="-Wl,-rpath /usr/pkg/lib -L/usr/pkg/lib -llapack -lblas -lg2c"
  ;;
  *-solaris2*)
  if test $CC = cc ; then
    BLAS=-xlic_lib=sunperf
    LAPACK=/home/a0783829/tools/sparc/lib/lapack_SUN4SOL2.a
    LIBS="$LAPACK $BLAS"
  else
    LAPACK="-L/usr/local/lib -llapack"
    BLAS="-L/usr/local/lib -lblas"
    LIBS="$LAPACK $BLAS"
  fi
  ;;
  *-linux-*)
#    LAPACK="/usr/lib64/liblapack.so.3"
#    BLAS="/usr/lib64/libblas.so"
#    LIBS="$LAPACK $BLAS /usr/lib64/libgfortran.so.1"
   LAPACK="-Wl,-rpath /apps/free/lapack/3.4.2/lib -L/apps/free/lapack/3.4.2/lib -llapack"
   BLAS="-lblas"
#  LIBS="$LAPACK $BLAS -lgfortran"
   LIBS="$LAPACK $BLAS"
  ;;  
  *)
    LIBS="$LAPACK $BLAS"
  ;;
esac

dnl Creating gpd (gauche package description) file
GAUCHE_PACKAGE_CONFIGURE_ARGS="`echo ""$ac_configure_args"" | sed 's/[\\""\`\$]/\\\&/g'`"
AC_MSG_NOTICE([creating ${PACKAGE_NAME}.gpd])
"$GAUCHE_PACKAGE" make-gpd "$PACKAGE_NAME" \
  -version "$PACKAGE_VERSION" \
  -configure "./configure $GAUCHE_PACKAGE_CONFIGURE_ARGS"

dnl Output
echo $PACKAGE_VERSION > VERSION
AC_OUTPUT(Makefile)

